--- a/crates/language_extension/Cargo.toml
+++ b/crates/language_extension/Cargo.toml
@@ -27,7 +27,8 @@ serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
 util.workspace = true
+virtual_document.workspace = true
 ztracing.workspace = true
 
 [package.metadata.cargo-machete]
-ignored = ["tracing"]
+ignored = ["tracing", "virtual_document"]
