Add FormatMarkdownTable editor action
Add a new editor action that detects the markdown pipe table around
the cursor, calculates column widths (with unicode-width for CJK),
and pads cells so pipes line up — similar to Emacs markdown-do.

The pure formatting algorithm lives in crates/markdown/src/table_format.rs
with no GPUI dependency, making it independently unit-testable. The editor
integration scans up/down from the cursor to find table boundaries, or
uses the selected rows when there is an explicit selection.

--- a/crates/markdown/Cargo.toml
+++ b/crates/markdown/Cargo.toml
@@ -31,6 +31,7 @@ settings.workspace = true
 sum_tree.workspace = true
 theme.workspace = true
 ui.workspace = true
+unicode-width.workspace = true
 util.workspace = true
 
 [dev-dependencies]
