Track secret-provider.md only in feature/secrets

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 
 # Ensure the WSL script always has LF line endings, even on Windows
 crates/zed/resources/windows/zed.sh text eol=lf
+secret-provider.md merge=ours
